Fix player button: vertical align icon

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -96,3 +96,7 @@ button {
     margin-bottom: 1rem;
   }
 }
+
+.video .btn-sm {
+  line-height: 0;
+}
